k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: legalos-app
  namespace: legalos
spec:
  selector:
    app: legalos-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
