k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: legalos-app
  namespace: legalos
spec:
  hosts:
    - "*"
  gateways:
    - legalos-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: legalos-app.legalos.svc.cluster.local
            port:
              number: 80
